--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,12 @@
 services:
   db:
+    env_file:
+      - secret/db.env
     image: mysql:8
     ports:
       - "3306:3306"
     volumes:
       - ./db_init:/docker-entrypoint-initdb.d
-    environment:
-      MYSQL_USER: "board_user"
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_pwd
     networks:
       - springboot-board-sample-network
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
@@ -15,19 +14,19 @@ services:
     secrets:
       - db_pwd
     healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$(cat $${MYSQL_ROOT_PASSWORD_FILE})
+      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_ROOT_PASSWORD
       start_period: 20s
       interval: 5s
       timeout: 5s
       retries: 30
   web:
+    env_file:
+      - secret/db.env
     build: .
     ports:
       - "8080:8080"
     environment:
       VERSION: "0.0.1"
-      DB_USER_NAME: "board_user"
-      DB_USER_PASSWORD: ${DB_USER_PASSWORD}
     networks:
       - springboot-board-sample-network
     secrets:
