--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.datasource.url=jdbc:mysql://db:3306/board
 spring.datasource.username=${DB_USER_NAME}
 spring.datasource.password=${DB_USER_PASSWORD}
@@ -5,3 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=1m
+spring.main.banner-mode=off
