--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=1m
 spring.main.banner-mode=off
+spring.output.ansi.enabled=always
+
+logging.file.name=./logs/app.log
