--- a/compose.yaml
+++ b/compose.yaml
@@ -22,7 +22,9 @@ services:
   web:
     env_file:
       - secret/db.env
-    build: .
+    build:
+      context: .
+      no_cache: true
     ports:
       - "8080:8080"
     environment:
